--- a/moving_pictures_org_App/static/assets/css/style.css
+++ b/moving_pictures_org_App/static/assets/css/style.css
@@ -101,6 +101,9 @@
     border: 1px solid #ddd !important;
   }
 }
+.login-wrapper {
+    display: none;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
